Fixed span spacing bug
Spans after periods took no space so make those spans take five pixels of width.

--- a/typer.css
+++ b/typer.css
@@ -564,6 +564,7 @@ li {
   border-radius: 5px;
   padding: 10px;
   resize: none;
+  display: inline-block;
 }
 
 #typeBox:focus {
